UI: Overflow Scrolling in Panel, Notifications fix und Alle schließen

--- a/svws-webclient/src/client/ts/src/tailwind.css
+++ b/svws-webclient/src/client/ts/src/tailwind.css
@@ -13,7 +13,7 @@
 .page--content {
 	@apply grid grid-cols-1 lg:grid-cols-2;
 	@apply gap-x-6 gap-y-16 lg:gap-y-20 lg:gap-x-16;
-	@apply px-6 lg:px-9 3xl:px-12 4xl:px-16 py-8;
+	@apply px-6 lg:px-9 3xl:px-12 4xl:px-16 pt-8 pb-16;
 	grid-auto-rows: min-content;
 	max-width: 123rem;
 	@apply mx-auto;
